# opt-gemm

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
pymodule/: pyoptgemm.cpp
pyoptgemm/: __init__.py  optgemm.py  pyoptgemm.cpp  version.py
scripts/: tune_cutlass_gemm.py
src/: gemm_kernel.h  gen_kernels.py  opt_gemm.cpp  opt_gemm.cu  opt_gemm.h
src/ampere/: ampere_gemm_kernel.h
src/ampere_kernels/: ampere_gemm_kernel.h
src/cuda/: cuda_backend.cu  cuda_backend.h  cuda_kernel.h
src/cuda/ampere/: ampere_gemm_kernel.h
src/env/: env.cpp  env.h
src/utils/: logger.h
tests/: benchmark.py  example_benchmark.py  sieve_benchmark.py  test.py  test_gemm.py
