[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name="pyoptgemm"
authors=[{name="Abhinav Jangda", email="abhijangda@gmail.com"}]
maintainers = [{name="Abhinav Jangda", email="abhijangda@gmail.com"}]
description=""
dynamic = ["version"]
requires-python= ">= 3.9"
license = {file="LICENSE"}
readme = "README.md"
keywords = ["cuda", "gpu", "matrix multiplication"]
dependencies = [
    "numpy",
    "torch",
    "torchvision"
]

[project.urls]
Homepage = "https://github.com/parasailteam/opt-gemm"
#Documentation = "https://github.com/abhijangda/fastkron"
#Repository = "https://github.com/abhijangda/fastkron"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests/",
]

[tool.setuptools_scm]
local_scheme = "node-and-date"
write_to = "./pyoptgemm/version.py"